# ttadapter_diff

./: cmp.py  hand_made.pkl  make_sample_pkl.py  pyproject.toml  readpkl.py  sample_trace.pkl  triton_npu_trace.pkl  triton_npu_trace_readable.txt
src/ttadapter_diff/: __init__.py  compile_tracer.py  run_tracer.py  schema.py  sitecustomize_template.py
